--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": ">=12.x"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
